
    - Fixed shared state bug interfering with ScopedSession.mapper's
      ability to apply default __init__ implementations on object
      subclasses.

    - Fixed up slices on Query (i.e. query[x:y]) to work properly
      for zero length slices, slices with None on either end.
      [ticket:1177]

    - Added an example illustrating Celko's "nested sets" as a 
      SQLA mapping.
      
    - session.execute() will execute a Sequence object passed to
      it (regression from 0.4).
    
    - Removed the "raiseerror" keyword argument from object_mapper()
      and class_mapper().  These functions raise in all cases
      if the given class/instance is not mapped.

    - Fixed session.transaction.commit() on a autocommit=False
      session not starting a new transaction.
      
    - Some adjustments to Session.identity_map's weak referencing
      behavior to reduce asynchronous GC side effects.
    
    - Adjustment to Session's post-flush accounting of newly
      "clean" objects to better protect against operating on
      objects as they're asynchronously gc'ed. [ticket:1182]
      
- sql
    - column.in_(someselect) can now be used as a columns-clause
      expression without the subquery bleeding into the FROM clause
      [ticket:1074]

- sqlite
    - Overhauled SQLite date/time bind/result processing to use
      regular expressions and format strings, rather than
      strptime/strftime, to generically support pre-1900 dates,
      dates with microseconds.  [ticket:968]

- mysql
    - Temporary tables are now reflectable.


0.5.0rc1
========

- orm
    - Query now has delete() and update(values) methods. This allows
      to perform bulk deletes/updates with the Query object.

    - The RowTuple object returned by Query(*cols) now features
      keynames which prefer mapped attribute names over column keys,
      column keys over column names, i.e.  Query(Class.foo,
      Class.bar) will have names "foo" and "bar" even if those are